--- a/panay-app/index.html
+++ b/panay-app/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
+    <link rel="stylesheet" href="scss/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
   </head>
-  <body>
+  <body class="bg-secondary">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
