cleaned up design

--- a/panay-app/index.html
+++ b/panay-app/index.html
@@ -9,7 +9,7 @@
   <title>Panay Tinapay</title>
 </head>
 
-<body class="bg-secondary">
+<body class="bg-bgdefault">
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
